book/tests/snapshots/snapshot__tests__prql__transforms__join-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\njoin side:left positions [employees.id==positions.employee_id]\n"
---
from employees
join side:left positions [employees.id == positions.employee_id]



