book/tests/snapshots/snapshot__tests__prql__transforms__join-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\njoin side:left p=positions [employees.id==p.employee_id]\n"
---
from employees
join side:left p = positions [employees.id == p.employee_id]



