book/tests/snapshots/snapshot__tests__prql__transforms__join-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\njoin positions [==emp_no]\n"
---
from employees
join positions [==emp_no]



