book/tests/snapshots/snapshot__tests__prql__transforms__select-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect name = f\"{first_name} {last_name}\"\n"
---
from employees
select name = f"{first_name} {last_name}"



