book/tests/snapshots/snapshot__tests__prql__transforms__select-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect [\n  name = f\"{first_name} {last_name}\",\n  age_eoy = dob - @2022-12-31,\n]\n"
---
from employees
select [
  name = f"{first_name} {last_name}",
  age_eoy = dob - @2022-12-31,
]



