book/tests/snapshots/snapshot__tests__prql__transforms__select-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect first_name\n"
---
from employees
select first_name



