book/tests/snapshots/snapshot__tests__prql__transforms__select-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from e=employees\nselect [e.first_name, e.last_name]\n"
---
from e = employees
select [
  e.first_name,
  e.last_name,
]



