book/tests/snapshots/snapshot__tests__prql__transforms__select-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.bigquery\nfrom tracks\nselect ![milliseconds,bytes]\n"
---
prql target:sql.bigquery



from tracks
select not [
  milliseconds,
  bytes,
]



