book/tests/snapshots/snapshot__tests__prql__transforms__select-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "from tracks\nselect [track_id, title, composer, bytes]\nselect ![title, composer]\n"
---
from tracks
select [
  track_id,
  title,
  composer,
  bytes,
]
select not [
  title,
  composer,
]



