book/tests/snapshots/snapshot__tests__prql__transforms__select-6.prql.snap
---
source: book/tests/snapshot.rs
expression: "from artists\nderive nick = name\nselect ![artists.*]\n"
---
from artists
derive nick = name
select not [artists.`*`]



