book/tests/snapshots/snapshot__tests__prql__transforms__sort-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort age\n"
---
from employees
sort age



